<resources>
    <string name="app_name">My PostApi</string>
    <string name="welcome">WEL COME</string>
    <string name="tagline">Create an Account and access thousand of cool stuffs</string>
    <string name="gettingstarted">Getting Started</string>
    <string name="alreadyAccount">Already have an Account?</string>
    <string name="loginin">Login in</string>
    <string name="loginnow">Log In Now</string>
    <string name="pleaselogintocontinueourapp">Please Login to Continue our app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="login">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="signupnow">Sign Up Now</string>
    <string name="pleasefillthedetailsandcreateaccount">Please Fill the details and Create account</string>
    <string name="fullname">Full Name</string>
    <string name="passwordmustbeatleast6character">Password must be atleast 6 character</string>
    <string name="sign_up">Sign Up</string>
    <string name="alreadyhaveanaccount">Already have an account</string>
    <string name="enteremail">Enter Email</string>
    <string name="enterecorrect">Enter Corrent Email</string>
    <string name="enterepassword">Enter Password</string>
    <string name="enterepassword6latter">Enter Password 6 word</string>
    <string name="entereUsername">Enter User Name</string>
    <string name="orconnectwith">Or connect with</string>
    <string name="ok">ok</string>
    <string name="sucessfull_SignUp">Sucessfull Signup</string>
    <string name="sucessfull_Login">Sucessfull Login</string>
    <string name="home">HOME</string>
    <string name="id">User ID</string>
    <string name="emailhome">Email</string>
    <string name="userpostapi">USER POST API</string>
    <string name="logout">Log Out</string>
    <string name="loginkey_Dilog">Login</string>
    <string name="signinkey_Dilog">Signin</string>
    <string name="Serverisnotworking">server is not Working Please Wait</string>
    <string name="username">User Name</string>
    <string name="areyousure">Are you Sure Log out</string>
    <string name="Loding">Loding....</string>
    <string name="pleaseturninternet">Please Turn On Internet</string>
</resources>