<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acivity.HomeActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Homename"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="@dimen/dimens_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/usernameid"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:gravity="center"
        android:hint="@string/id"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Homename" />

    <com.google.android.material.textview.MaterialTextView

     android:id="@+id/nametext"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:gravity="center"
        android:hint="@string/emailhome"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameid" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Emailtext"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@+id/nametext"
        android:hint="@string/username"
        android:gravity="center"
        android:textColorHint="@color/black"
        />
</androidx.constraintlayout.widget.ConstraintLayout>